kubernetes/apps/default/zipline/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zipline
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`i.f9.casa`)
      kind: Rule
      services:
        - name: zipline
          port: 3000
      middlewares:
        - name: default-headers
          namespace: traefik
